add support for profile pics
